--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ name = "polars_finance"
 crate-type= ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py38"] }
-pyo3-polars = { version = "0.12.0", features = ["derive", "lazy"] }
+pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
+pyo3-polars = { version = "*", features = ["derive", "lazy"] }
 serde = { version = "1", features = ["derive"] }
-polars = { version = "0.38.3", features=["diff", "lazy", "performant", "polars-ops", "dtype-date", "dtype-datetime", "dtype-struct"]}
+polars = { version = "*", features=["diff", "lazy", "performant", "polars-ops", "dtype-date", "dtype-datetime", "dtype-struct"]}
 
 [target.'cfg(target_os = "linux")'.dependencies]
 jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
