--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,10 @@ edition = "2021"
 
 [lib]
 name = "polars_trading"
-crate-type= ["cdylib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
 pyo3-polars = { version = "0.16.0", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
-polars = { version = "0.42.0", default-features = false }
-
+polars = { version = "0.42.0" }
