--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ name = "polars_trading"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
-pyo3-polars = { version = "0.16.0", features = ["derive"] }
+pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
+pyo3-polars = { version = "0.16.0", features = ["derive", "dtype-struct"] }
 serde = { version = "1", features = ["derive"] }
-polars = { version = "0.42.0" }
+polars = { version = "0.42.0", features = ["dtype-struct"] }
+num = "0.4.3"
