--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ dev-dependencies = [
     "build>=1.2.1",
     "hypothesis>=6.111.2",
     "marimo>=0.8.8",
-    "maturin>=1.7.1",
+    "maturin[patchelf]>=1.7.1",
     "mimesis>=12.1.0",
     "pandas>=2.2.2",
     "pip>=24.2",
