--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
-name = "polars-finance"
+name = "polars-trading"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "polars_finance"
-crate-type= ["cdylib"]
+name = "polars_trading"
+crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
-pyo3-polars = { version = "*", features = ["derive", "lazy"] }
+pyo3-polars = { version = "0.16.0", features = ["derive", "dtype-struct"] }
 serde = { version = "1", features = ["derive"] }
-polars = { version = "*", features=["diff", "lazy", "performant", "polars-ops", "dtype-date", "dtype-datetime", "dtype-struct"]}
-
-[target.'cfg(target_os = "linux")'.dependencies]
-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
+polars = { version = "0.42.0", features = ["dtype-struct"] }
+num = "0.4.3"
