--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,41 +1,16 @@
-[project]
-name = "polars-finance"
-version = "0.1.0"
-description = "Add your description here"
-authors = [
-    { name = "Nelson Griffiths", email = "nelsongriffiths@doubleriver.com" },
-]
-dependencies = [
-    "polars[plot]>=0.20.22",
-    "great-tables>=0.5.0",
-    "hvplot>=0.9.2",
-    "scipy>=1.13.0",
-]
-readme = "README.md"
-requires-python = ">= 3.8"
-
 [build-system]
-requires = ["maturin>=1.2,<2.0"]
+requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
 build-backend = "maturin"
 
-[tool.rye]
-managed = true
-dev-dependencies = [
-    "pytest>=8.1.1",
-    "pytest-benchmark>=4.0.0",
-    "ruff>=0.4.1",
-    "marimo>=0.4.7",
-    "databento>=0.33.0",
-    "pytest-cov>=5.0.0",
-    "pytest-memray>=1.6.0",
-    "pytest-codspeed>=2.2.1",
-    "nox>=2024.4.15",
+[project]
+name = "polars-trading"
+requires-python = ">=3.9"
+classifiers = [
+    "Programming Language :: Rust",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
 ]
-
-[tool.maturin]
-python-source = "python"
-module-name = "polars_finance._lowlevel"
-features = ["pyo3/extension-module"]
+dependencies = ["polars[plot]>=1.3"]
 
 [tool.ruff.format]
 docstring-code-format = true
@@ -46,6 +21,8 @@ lint.ignore = [
     'A003',
     'ANN101',
     'ANN401',
+    'ARG002',  # todo: enable
+    'ARG003',  # todo: enable
     'C901',
     'COM812',
     'D100',
@@ -57,14 +34,16 @@ lint.ignore = [
     'D212',
     'DTZ',
     'E501',
+    'FBT003',  # todo: enable
     'FIX',
     'ISC001',
     'PD',
     'PLR0911',
     'PLR0912',
-    'PLR0913',
     'PLR5501',
     'PLR2004',
+    'PLR0913',
+    'PLC0414',
     'PT011',
     'PTH',
     'RET505',
@@ -77,17 +56,60 @@ lint.ignore = [
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 lint.fixable = ["ALL"]
 
-[tool.pytest.ini_options]
-testpaths = 'tests'
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    "tests",
+    ".git",
+    ".git-rewrite",
+    ".mypy_cache",
+    ".ruff_cache",
+    "venv",
+    ".ipynb",
+    "venv",
+]
+line-length = 88
 
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.maturin]
+module-name = "polars_trading._internal"
+
+[[tool.mypy.overrides]]
+module = "polars.utils.udfs"
+ignore_missing_imports = true
+
+[tool.uv]
+dev-dependencies = [
+    "build>=1.2.1",
+    "commitizen>=3.29.0",
+    "hypothesis>=6.111.2",
+    "marimo>=0.8.8",
+    "maturin>=1.7.1",
+    "mimesis>=12.1.0",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocstrings[python]>=0.26.1",
+    "pandas>=2.2.2",
+    "pip>=24.2",
+    "pre-commit>=3.8.0",
+    "pyarrow>=17.0.0",
+    "pytest-benchmark>=4.0.0",
+    "pytest>=8.3.2",
+    "ruff>=0.6.3",
+    "setuptools>=74.1.0",
+    "wheel>=0.44.0",
+]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "semver2"
+version_provider = "cargo"
+update_changelog_on_bump = true
+major_version_zero = true
+
+[tool.pytest.ini_options]
 addopts = [
-    '--cov-report=term-missing',
-    '--cov=polars_finance',
-    '--benchmark-disable',
-    '--benchmark-columns',
-    'min,mean,stddev,outliers,rounds,iterations',
-    '--benchmark-group-by',
-    'group',
-    '--benchmark-warmup',
-    'on',
+    "--benchmark-disable",
+    "--benchmark-columns=min,mean,median,max,stddev",
 ]
