execute benchmarks with uv

--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -31,4 +31,4 @@ jobs:
         uses: CodSpeedHQ/action@v3
         with:
           token: ${{ secrets.CODSPEED_TOKEN }}
-          run: pytest tests/ --codspeed -m 'benchmark and not pandas'
+          run: uv run pytest tests/ --codspeed -m 'benchmark and not pandas'
