--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,16 @@ classifiers = [
 ]
 dependencies = ["polars[plot]>=1.3"]
 
+[project.optional-dependencies]
+test = [
+    "pandas>=2.2.2",
+    "pyarrow>=17.0.0",
+    "pytest>=8.3.2",
+    "pytest-benchmark[histogram]>=4.0.0",
+    "pytest-codspeed>=2.2.1",
+    "mimesis>=12.1.0",
+]
+
 [tool.ruff.format]
 docstring-code-format = true
 
@@ -83,19 +93,12 @@ ignore_missing_imports = true
 dev-dependencies = [
     "build>=1.2.1",
     "commitizen>=3.29.0",
-    "hypothesis>=6.111.2",
     "marimo>=0.8.8",
     "maturin>=1.7.1",
-    "mimesis>=12.1.0",
     "mkdocs-gen-files>=0.5.0",
     "mkdocstrings[python]>=0.26.1",
-    "pandas>=2.2.2",
     "pip>=24.2",
     "pre-commit>=3.8.0",
-    "pyarrow>=17.0.0",
-    "pytest-benchmark[histogram]>=4.0.0",
-    "pytest-codspeed>=2.2.1",
-    "pytest>=8.3.2",
     "ruff>=0.6.3",
     "setuptools>=74.1.0",
     "wheel>=0.44.0",
