--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Lint
 on:
   push:
     branches:
@@ -6,24 +6,6 @@ on:
     tags-ignore:
       - "**"
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v2
-
-      - name: Set up Python
-        run: uv python install
-
-      - name: Install the project
-        run: uv sync --all-extras --dev
-
-      - name: Run tests
-        # For example, using `pytest`
-        run: uv run pytest tests --benchmark-disable
   lint:
     runs-on: ubuntu-latest
 
@@ -37,7 +19,7 @@ jobs:
         run: uv python install
 
       - name: Install the project
-        run: uv sync --all-extras --dev
+        run: uv sync --only-dev
 
       - name: Run Ruff
         run: uv run ruff check --output-format=github .
