--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
-pyo3-polars = { version = "0.16.0", features = ["derive", "dtype-struct"] }
+pyo3-polars = { version = "*", features = ["derive", "dtype-struct"] }
 serde = { version = "1", features = ["derive"] }
-polars = { version = "0.42.0", features = ["dtype-struct"] }
+polars = { version = "*", features = ["dtype-struct"] }
 num = "0.4.3"
