working frac diff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ dev-dependencies = [
     "build>=1.2.1",
     "commitizen>=3.29.0",
     "marimo>=0.8.8",
-    "maturin>=1.7.1",
+    "maturin[patchelf]>=1.7.1",
     "mkdocs-gen-files>=0.5.0",
     "mkdocstrings[python]>=0.26.1",
     "pip>=24.2",
