--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ docstring-code-format = true
 lint.select = ["ALL"]
 lint.ignore = [
     'A003',
-    'ANN101',
     'ANN401',
     'ARG002',  # todo: enable
     'ARG003',  # todo: enable
@@ -85,7 +84,6 @@ dev-dependencies = [
     "build>=1.2.1",
     "commitizen>=3.29.0",
     "marimo>=0.8.8",
-    "maturin[patchelf]>=1.7.1",
     "mkdocs-gen-files>=0.5.0",
     "mkdocstrings[python]>=0.26.1",
     "pip>=24.2",
@@ -100,6 +98,7 @@ dev-dependencies = [
     "pytest-codspeed>=2.2.1",
     "mimesis>=12.1.0",
     "pytest-cov>=5.0.0",
+    "maturin>=1.7.4",
 ]
 
 [tool.commitizen]
