--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,23 @@
 [package]
 name = "polars-trading"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 name = "polars_trading"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "*", features = ["extension-module", "abi3-py38"] }
-pyo3-polars = { version = "0.16.0", features = ["derive", "dtype-struct"] }
+pyo3 = { version = "0.25.0", features = ["abi3-py38"] }
+pyo3-polars = { version = "0.22.0", features = [
+    "derive",
+    "dtype-struct",
+    "lazy",
+] }
 serde = { version = "1", features = ["derive"] }
-polars = { version = "0.42.0", features = ["dtype-struct"] }
+polars = { version = "0.49.1", features = ["dtype-struct", "lazy"] }
+polars-arrow = { version = "0.49.1" }
 num = "0.4.3"
+
+[features]
+default = ["pyo3/extension-module"]
