--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,6 +183,8 @@ jobs:
       attestations: write
     steps:
       - uses: actions/download-artifact@v4
+        with:
+          path: dist/
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
